Header layout changes and problem with collapse menu solved

--- a/css/main.css
+++ b/css/main.css
@@ -742,9 +742,13 @@ overflow-x: hidden;
 	top: -6.7px;
 	height: 28px;
 }
-#image_menu .iconButtons, .iconButtons{
+#image_menu .iconButtons, #text_menu .iconButtons, .iconButtons{
 	position:relative;
-	top:-3px;
+	margin: auto 4px;
+	top: -4px;
+}
+#text_menu .iconButtons{
+	margin-left: -4px;
 }
 
 .mainButtons{
@@ -767,6 +771,7 @@ overflow-x: hidden;
     text-indent: 0px;
     height: 28px;
     max-height: 28px;
+    top:-1px;
 }
 
 .mainButtons > span, .iconButtons span{
@@ -809,6 +814,7 @@ overflow-x: hidden;
 
 .mainButtons .fa{
 	text-shadow: none !important;
+	height: 0px;
 }
 
 .mainButtons:hover, .active{	
@@ -869,13 +875,14 @@ overflow-x: hidden;
 	margin: 0 auto;
 	width: 100%;
 	text-align: center;
-	top:6px;
+	top:7px;
 	height: 28px;
 }
 
 #image_menu{
 	display: inline-block;
 	height: 28px;
+	position: relative;
 }
 
 #slider { 	
@@ -886,7 +893,7 @@ overflow-x: hidden;
 	
 	/*Chiara*/
 	position: relative;
-	margin:0.4em 0.2em;
+	margin:0em 0.2em;
 	 -moz-box-shadow:0 1px 6px rgba(0, 0, 0, 0.8);
 	-webkit-box-shadow:0 1px 6px rgba(0, 0, 0, 0.8);
 	-o-box-shadow:0 1px 6px rgba(0, 0, 0, 0.8);
@@ -894,6 +901,9 @@ overflow-x: hidden;
 	-ms-box-shadow:0 1px 6px rgba(0, 0, 0, 0.8);
     box-shadow:0 1px 6px rgba(0, 0, 0, 0.8);
     background-color: #F5EAD4;
+    height: 14px;
+    top: 50%;
+	margin-top: -6px;
 }
 
 #slider a{
@@ -905,6 +915,10 @@ overflow-x: hidden;
 	box-shadow:0px 1px 3px -1px rgba(0,0,0,0.6);
 	border-radius: 5px;
 	background-color: #F5EAD4;
+	top: 50%;
+    margin-left: -0.2em;
+    margin-top: -18px;
+    height: 34px;
 }
 
 #slider a:focus{
@@ -964,9 +978,10 @@ overflow-x: hidden;
 	position: relative;
 	height: 28px;
     left: 0px;
-	padding: 0px 4px;
+	padding: 0px;
 	font-size: 1em;
-	#top:-10px;
+	margin:0 4px;
+	top:-1px;
 }
 
 #right_header .like_select{
@@ -1002,8 +1017,10 @@ overflow-x: hidden;
 }
 
 .label_selected{
-	margin: 4px 24px 4px 8px;
-	position: absolute;
+	#margin: 4px 24px 4px 8px;
+
+    margin: 4px 8px;
+    position: absolute;
 }
 
 .like_select .option_container{
@@ -1013,7 +1030,7 @@ overflow-x: hidden;
 	padding: 3px 5px 0px 5px;
 	background:#f5ead4;
 	width: auto;
-	left: 4px;
+	left: 0px;
 	top: 5px;
 	max-height: 170px;
 	z-index: 400;
@@ -1057,16 +1074,14 @@ overflow-x: hidden;
 	border-radius: 2px 2px 0 0;
 }
 .like_select .open_select{
-	#padding: 5px;
 	width: 24px;
 	text-align: center;
 	position: absolute;
-	right: 4px;
+	right: 0px;
 	top: 0px;
 	height: 28px;
 	border-left: 1px solid #d9d7d7;
 	cursor: pointer;
-	#background: url(../images/down_arrow_select.jpg) no-repeat right #f5ead4;
 	background:#ccc4ba;
 	opacity: 0.5;
 	border-radius: 0 2px 2px 0;
@@ -1141,12 +1156,11 @@ overflow-x: hidden;
 }
 
 #main_fullscreen{
-	#width: 34px;
-	#height: 34px;
-	#background: url(../images/full_screen.png) no-repeat;
 	text-shadow: 0 1px 4px #000000; 
 	color:#F5EAD4;
 	font-size: 0.65em;
+	float: right; 
+	padding: 12px 12px 0px 0px;
 }
 #main_fullscreen:hover{
 	#width: 34px;
@@ -1160,17 +1174,6 @@ overflow-x: hidden;
 	position: absolute;
 }
 
-/*
-#main_right_arrow{
-	background: url(../images/arr_right.png) no-repeat;
-	float: right;
-	margin-right: -26px;
-	margin-top: -2.2px;
-	width: 26px;
-	height: 89px;
-	cursor: pointer;
-}*/
-
 #main_right_arrow{
 	background:url(../images/arrows.png) no-repeat 0 -177px;
     
@@ -1181,13 +1184,7 @@ overflow-x: hidden;
 	text-indent:-9999px;
     width:31px;
     z-index:9999;
-    /* old
-    float: right;
-    margin-right: -39px;
-	margin-top: 225px;
-    #position:absolute;
-    */
- 	
+    
     /* CDP */
     top: 50%;
 	position: absolute;
@@ -1200,30 +1197,15 @@ overflow-x: hidden;
     background-position:0 -118px;
 
 }
-/*
-#main_left_arrow{
-	background: url(../images/arr_left.png) no-repeat;
-	float: left;
-	margin-left: -26px;
-	margin-top: -3px;
-	width: 26px;
-	height: 89px;
-	cursor: pointer;
-}*/
 
 #main_left_arrow{
 	background:url(../images/arrows.png) no-repeat 0 -59px;
     
     float: left;
-	/*margin-left: -39px;
-	margin-top: 225px;
-	*/
     cursor:pointer;
     display:inline-block;
     height:59px;
     outline:0;
-    #position:absolute;
-    
     text-indent:-9999px;
     width:31px;
     z-index:9999;
@@ -1240,31 +1222,7 @@ overflow-x: hidden;
 }
 
 /*Chiara*/
-#txtimg_link {
-	#background: url("../images/imgText.png") top center no-repeat;
-	min-height: 50px;
-	font-size: 1.4em;
-	padding:0px;
-	#margin: 0px 2.5px;
-}
-
-#txttxt_link {
-	#background: url("../images/textText.png") top center no-repeat;
-	min-height: 50px;
-	font-size: 1.4em;
-	padding:0px;
-	#margin: 0px 2.5px;
-}
-
-#txtimg_link:hover, #txtimg_link.current_mode  {
-	#background: url("../images/imgText-hover.png") top center no-repeat;
-	min-height: 50px;
-	font-size: 1.4em;
-	padding:0px;
-}
-
-#txttxt_link:hover, #txttxt_link.current_mode{
-	#background: url("../images/textText-hover.png") top center no-repeat;
+#txtimg_link, #txttxt_link, #txtimg_link:hover, #txtimg_link.current_mode, #txttxt_link:hover, #txttxt_link.current_mode{
 	min-height: 50px;
 	font-size: 1.4em;
 	padding:0px;
